--- a/docs/vite-manifest.json
+++ b/docs/vite-manifest.json
@@ -1,66 +1,99 @@
 {
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-0e60a0f9.js",
+    "file": "_app/immutable/start-dae6537d.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-fd610874.js",
-      "_singletons-54913f0e.js"
+      "_index-73231da7.js",
+      "_singletons-cc89601a.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
       ".svelte-kit/generated/nodes/1.js",
       ".svelte-kit/generated/nodes/2.js",
       ".svelte-kit/generated/nodes/3.js",
-      ".svelte-kit/generated/nodes/4.js"
+      ".svelte-kit/generated/nodes/4.js",
+      ".svelte-kit/generated/nodes/5.js",
+      ".svelte-kit/generated/nodes/6.js",
+      ".svelte-kit/generated/nodes/7.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-a165b9c6.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-7f106e4b.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-fd610874.js"
+      "_index-73231da7.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-a877473d.js",
+    "file": "_app/immutable/components/error.svelte-7738556b.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-fd610874.js",
-      "_singletons-54913f0e.js"
+      "_index-73231da7.js",
+      "_singletons-cc89601a.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-e9890219.js",
+    "file": "_app/immutable/components/pages/_page.svelte-fdcb04f2.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-fd610874.js"
+      "_index-73231da7.js"
+    ]
+  },
+  "src/routes/clicker/+page.svelte": {
+    "file": "_app/immutable/components/pages/clicker/_page.svelte-a42d665f.js",
+    "src": "src/routes/clicker/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-73231da7.js"
+    ],
+    "css": [
+      "_app/immutable/assets/_page-c75998e2.css"
+    ]
+  },
+  "src/routes/clicker/secret/+page.svelte": {
+    "file": "_app/immutable/components/pages/clicker/secret/_page.svelte-6b56cf53.js",
+    "src": "src/routes/clicker/secret/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-73231da7.js"
     ]
   },
   "src/routes/memory/+page.svelte": {
-    "file": "_app/immutable/components/pages/memory/_page.svelte-e38a12fd.js",
+    "file": "_app/immutable/components/pages/memory/_page.svelte-f4e6feaa.js",
     "src": "src/routes/memory/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-fd610874.js"
+      "_index-73231da7.js"
     ],
     "css": [
       "_app/immutable/assets/_page-2870e030.css"
     ]
   },
   "src/routes/telltale/+page.svelte": {
-    "file": "_app/immutable/components/pages/telltale/_page.svelte-aef77fab.js",
+    "file": "_app/immutable/components/pages/telltale/_page.svelte-4260553e.js",
     "src": "src/routes/telltale/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-fd610874.js",
-      "_index-1645db2a.js"
+      "_index-73231da7.js",
+      "_index-5f3d1831.js"
     ],
     "css": [
       "_app/immutable/assets/_page-152f6357.css"
+    ]
+  },
+  "src/routes/TodoApp/+page.svelte": {
+    "file": "_app/immutable/components/pages/TodoApp/_page.svelte-5f413733.js",
+    "src": "src/routes/TodoApp/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-73231da7.js"
+    ],
+    "css": [
+      "_app/immutable/assets/_page-5415412f.css"
     ]
   },
   "src/routes/+layout.js": {
@@ -71,26 +104,26 @@
       "__layout-5d13426d.js"
     ]
   },
-  "_singletons-54913f0e.js": {
-    "file": "_app/immutable/chunks/singletons-54913f0e.js",
+  "_singletons-cc89601a.js": {
+    "file": "_app/immutable/chunks/singletons-cc89601a.js",
     "imports": [
-      "_index-1645db2a.js"
+      "_index-5f3d1831.js"
     ]
   },
-  "_index-fd610874.js": {
-    "file": "_app/immutable/chunks/index-fd610874.js"
+  "_index-73231da7.js": {
+    "file": "_app/immutable/chunks/index-73231da7.js"
   },
-  "_index-1645db2a.js": {
-    "file": "_app/immutable/chunks/index-1645db2a.js",
+  "_index-5f3d1831.js": {
+    "file": "_app/immutable/chunks/index-5f3d1831.js",
     "imports": [
-      "_index-fd610874.js"
+      "_index-73231da7.js"
     ]
   },
   "__layout-5d13426d.js": {
     "file": "_app/immutable/chunks/_layout-5d13426d.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-d27c3c06.js",
+    "file": "_app/immutable/chunks/0-892b7b5e.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -99,7 +132,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-06d2e10f.js",
+    "file": "_app/immutable/chunks/1-a0149741.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -107,7 +140,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-be657b22.js",
+    "file": "_app/immutable/chunks/2-b0b86c5c.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
@@ -115,27 +148,59 @@
     ]
   },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-640c116f.js",
+    "file": "_app/immutable/chunks/3-58b36fdd.js",
     "src": ".svelte-kit/generated/nodes/3.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/clicker/+page.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/4.js": {
+    "file": "_app/immutable/chunks/4-ddd3af33.js",
+    "src": ".svelte-kit/generated/nodes/4.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/clicker/secret/+page.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/5.js": {
+    "file": "_app/immutable/chunks/5-040c5060.js",
+    "src": ".svelte-kit/generated/nodes/5.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/memory/+page.svelte"
     ]
   },
-  ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-62e14dc8.js",
-    "src": ".svelte-kit/generated/nodes/4.js",
+  ".svelte-kit/generated/nodes/6.js": {
+    "file": "_app/immutable/chunks/6-1c3c64bd.js",
+    "src": ".svelte-kit/generated/nodes/6.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/telltale/+page.svelte"
     ]
   },
-  "src/routes/memory/+page.css": {
-    "file": "_app/immutable/assets/_page-2870e030.css",
-    "src": "src/routes/memory/+page.css"
+  ".svelte-kit/generated/nodes/7.js": {
+    "file": "_app/immutable/chunks/7-8315470c.js",
+    "src": ".svelte-kit/generated/nodes/7.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/TodoApp/+page.svelte"
+    ]
+  },
+  "src/routes/clicker/+page.css": {
+    "file": "_app/immutable/assets/_page-c75998e2.css",
+    "src": "src/routes/clicker/+page.css"
+  },
+  "src/routes/TodoApp/+page.css": {
+    "file": "_app/immutable/assets/_page-5415412f.css",
+    "src": "src/routes/TodoApp/+page.css"
   },
   "src/routes/telltale/+page.css": {
     "file": "_app/immutable/assets/_page-152f6357.css",
     "src": "src/routes/telltale/+page.css"
+  },
+  "src/routes/memory/+page.css": {
+    "file": "_app/immutable/assets/_page-2870e030.css",
+    "src": "src/routes/memory/+page.css"
   }
 }
