--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
 		"svelte": "^3.44.0",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-french-toast": "^1.0.3"
+	}
 }
